@@ -1,0 +1,88 @@
+module CruiseControl
+  class Init
+  
+    def run
+      command = ARGV.shift
+      if command.nil?
+        STDERR.puts "Type 'cruise --help' for usage."
+        exit -1
+      elsif method = method_for_command(command)
+        self.send(method)
+      else
+        STDERR.puts "Unknown command : '#{command}'"
+        STDERR.puts "Type 'cruise --help' for usage."
+        exit -1
+      end
+    end
+    
+    def method_for_command(command)
+      case command
+      when 'start'                            then :start
+      when 'stop'                             then :stop
+      when 'add'                              then :add
+      when 'build', 'builder'                 then :builder
+      when 'version', '-v', '--version'       then :version
+      when 'help', '-h', '--help', '/?', '-?' then :help
+      end
+    end
+  
+    def start
+      require "lib/platform.rb"
+      Platform.running_as_daemon = ARGV.include?('-d') || ARGV.include?('--daemon')
+      load "./script/server"
+    end
+
+    def stop
+      pid_file = File.join("tmp", "pids", "mongrel.pid")
+      if File.exist?(pid_file)
+        require File.dirname(__FILE__) + "/../platform.rb"
+        Platform.safely_exec("mongrel_rails stop -P #{pid_file}")
+      end
+    end
+
+    def add
+      load "./script/add_project"
+    end
+
+    def builder
+      load "./script/builder"
+    end
+  
+    def version
+      puts <<-EOL
+    CruiseControl.rb, version #{CruiseControl::VERSION::STRING}
+    Copyright (C) 2007 ThoughtWorks
+      EOL
+    end
+  
+    def help
+      command = ARGV.shift
+
+      ARGV.clear << '--help'
+      if command.nil?
+        puts <<-EOL
+    Usage: cruise <command> [options] [args]
+
+    CruiseControl.rb command-line client, version #{CruiseControl::VERSION::STRING}
+    Type 'cruise help <command>' for help on a specific command.
+    Type 'svn --version' to see the version number.
+
+    Available commands:
+      start      - starts the web server
+      add        - adds a project
+      build      - starts the builder for an individual project
+
+    CruiseControl.rb is a Continous Integration Server.
+    For additional information, see http://cruisecontrolrb.rubyforge.org/
+        EOL
+      elsif method_for_command(command)
+        self.send(method_for_command(command))
+      else
+        STDERR.puts "Type 'cruise help' for usage."
+        exit -1
+      end
+
+    end
+  
+  end
+end
