@@ -5,11 +5,13 @@ TRUNK
   * can be invoked as ./cruise add [project name] [repository name]
   * -s | -source-control option added to specify the source control type
   * infers source control type from repository location if it starts with svn:, svn+ssh: or git:
+- 'cruise stop' command:
+  * currently only works for mongrel in daemon ('-d') mode
 - [bugfix] dashboard gracefully handles the situation where there is site.css, but ./public/stylesheets is not a
            writeable directory (prints a warning and keeps going on)
 - [bugfix] Added XmlServerReport.aspx for compatibility with CCTray.NET >= 1.3 [Steve Donie]
 - [bugfix] cruise start --daemon works with Webrick
-
+- [bugfix] stop builder processes from going zombie by using Process#detach [Kurtis Seebaldt]
 * 1.3.0
   - cruise data (build results, etc) is stored in $HOME/.cruise/ by default
   - builds can now be serialized - with a config option set, CC.rb will only run one build at a time
